# NYC-Comments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Notebooks/: 00-data-extraction.ipynb  01-data-exploration.ipynb  02-articles-feat-eng.ipynb  03-model-building-and-eval.ipynb  03-model-building-eval.ipynb  03b-topic-modelling.ipynb  04-comments.ipynb
models/: lsi_model.lsi  lsi_model.lsi.projection
opinion_mine/: utilities.py
opinion_mine/data_prep/: utilities.py
opinion_mine/ml/: evaluation.py  training.py  transformers.py  utilities.py
